<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/vertical_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            tools:context="com.walng.dhagz.paypalcalc.MainActivity">

            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amount_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currency_spinner">

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:digits="1234567890."
                    android:inputType="number"
                    android:textSize="@dimen/text_headline" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/amount_with_transaction_charge_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount_container"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_marginRight="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/total_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_headline"
                            tools:text="PHP 500.00" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_amount"
                            android:textSize="@dimen/text_label" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/paypal_transaction_charge_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amount_with_transaction_charge_card"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/paypal_transaction_charge_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/paypal_transaction_charge_label" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/paypal_transaction_charge_label"
                        android:background="#BEBEBE" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider"
                        android:layout_marginBottom="@dimen/vertical_margin"
                        android:layout_marginLeft="@dimen/horizontal_margin"
                        android:layout_marginRight="@dimen/horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_margin">

                        <View
                            android:id="@+id/divider_center"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_centerHorizontal="true" />

                        <LinearLayout
                            android:id="@+id/percentage_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/divider_center"
                            android:layout_toStartOf="@+id/divider_center"
                            android:gravity="center_vertical"
                            android:minHeight="72dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/paypal_transaction_charge_percentage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_headline"
                                tools:text="4.4%" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/paypal_transaction_charge_percentage"
                                android:textSize="@dimen/text_label" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/divider_center"
                            android:layout_toRightOf="@+id/divider_center"
                            android:gravity="center_vertical"
                            android:minHeight="72dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/paypal_transaction_charge_additional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_headline"
                                tools:text="PHP 15.00" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/paypal_transaction_charge_additional"
                                android:textSize="@dimen/text_label" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/percentage_container"
                            android:gravity="center_vertical"
                            android:minHeight="72dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/paypal_transaction_charge_total"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_headline"
                                tools:text="PHP 500.00" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/paypal_transaction_charge_total"
                                android:textSize="@dimen/text_label" />
                        </LinearLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>